# elm-research

./: .gitignore  README.md  eval.py  generate.py  infer_eval.py  pyproject.toml
datasets/account-intelligence/: eval_split.txt
docs/account-intelligence/: README.md  data-audit.md  evaluation.md  finetuning-methodology.md
prompts/account-intelligence/: system-prompt.md  user-prompt-template.md
schemas/account-intelligence/: schema.json
train/: check_collator.py  format_jsonl.py  run.sh  train_lora.py
