[project]
name = "elm-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "anthropic>=0.96.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.1.1,<4.4.0",
    "jsonschema>=4.23.0",
    "peft>=0.19.1",
    "python-dotenv>=1.0.1",
    "torch>=2.6",
    "transformers>=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.5.7",
]

[dependency-groups]
dev = []

[[tool.uv.index]]
  name = "pytorch-cu128"
  url = "https://download.pytorch.org/whl/cu128"
  explicit = true

  [tool.uv.sources]
  torch = { index = "pytorch-cu128" }
